Add data support

--- a/test/expected/middleware.html
+++ b/test/expected/middleware.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <title>Foo</title>
+    <title>Foobar | Bar</title>
   </head>
   <body>
-    <h1>Foo</h1>
+    <h1>Bar</h1>
   </body>
 </html>
